assign1/tests/parsing/bad/unknown-type.c
#include "FenneC.h"

unknown main() {}